--- a/resources.html
+++ b/resources.html
@@ -15,8 +15,10 @@
 		<div id="main">
           
         <a href ="index.html#contact">Contact info</a>
-        <h3>Handouts</h3>
+
+        <h3>Slides & Handouts</h3>
         <ul>
+          <li><a href="https://docs.google.com/presentation/d/1TdK-HbbvRlxd8bhf7tobNwEbU1eC9umbVrpYaGlHeYE/edit?usp=sharing">Slides</a></li>
           <li><a href="files/Introduction_to_Shell.pdf">Command line</a> [PDF]</li>
           <li><a href="files/WorkingWithGit.pdf">Git Basics</a> [PDF]</li>
           <li><a href="files/Collaborating_in_git.pdf">Collaboration Exercise</a> [PDF]</li>
